# SparseBatchSfM

./: .gitignore  CMakeLists.txt  README.md  build.sh  result.ply  run.sh
images/calibration/: rename.py
images/homer/: delete.py
images/temple2/: K.txt
images/zeus/: rename.py
include/: BundleAdjustment.hpp  FeatureProcessor.hpp  GraphMerge.hpp  ImageCapture.hpp  SparseBatchSfM.hpp  TwoViewReconstruction.hpp  protos.hpp  utils.hpp
output/: TwoView_0_1.ply  TwoView_10_11.ply  TwoView_11_12.ply  TwoView_11_13.ply  TwoView_12_13.ply  TwoView_13_14.ply  TwoView_14_15.ply  TwoView_14_16.ply  TwoView_14_17.ply  TwoView_14_18.ply  TwoView_15_16.ply  TwoView_16_17.ply  TwoView_17_18.ply  TwoView_1_2.ply  TwoView_2_3.ply  TwoView_3_4.ply  TwoView_4_5.ply  TwoView_4_6.ply  TwoView_5_6.ply  TwoView_6_7.ply  TwoView_6_8.ply  TwoView_7_8.ply  TwoView_8_10.ply  TwoView_8_9.ply  TwoView_9_10.ply
src/: BundleAdjustment.cpp  FeatureProcessor.cpp  GraphMerge.cpp  ImageCapture.cpp  SparseBatchSfM.cpp  TwoViewReconstruction.cpp  main.cpp  utils.cpp
